--- a/app/events/events-list.component.html
+++ b/app/events/events-list.component.html
@@ -1,5 +1,7 @@
 <div>
     <h1>Upcoming Angular 2 Events</h1>
     <hr/>
-    <event-thumbnail (eventClick)="handleEventClicked($event)" [event]="eventBase"></event-thumbnail>
+    <event-thumbnail #thumbnail [event]="eventBase"></event-thumbnail>
+    <h3>{{thumbnail.someProperty}}</h3>
+    <button class="btn btn-primary" (click)="thumbnail.logFoo()">Log data</button>
 </div>
