--- a/app/events/events-list.component.html
+++ b/app/events/events-list.component.html
@@ -1,5 +1,9 @@
 <div>
     <h1>Upcoming Angular 2 Events</h1>
     <hr/>
-    <event-thumbnail [event]="eventBase"></event-thumbnail>
+    <div class="row">
+        <div *ngFor="let eventBase of events" class="col-md-5">
+            <event-thumbnail [event]="eventBase"></event-thumbnail>
+        </div>
+    </div>
 </div>
